--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 		</main>
 
 		<!-- Rodapé -->
-		<div html-include="_footer.html"></div>
+		<div html-include="footer.html"></div>
 
 		<script src="js/common.js"></script>
 	</body>
