--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
 		<title>Traduções - bMatSantos</title>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<link rel="shortcut icon" href="img/favicon.png">
 		
 		<!-- Open Graph -->
 		<meta property="og:title" content="Traduções" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://bmatsantos.github.io" />
-		<meta property="og:image" content="https://bmatsantos.bitbucket.io/img/og/banner.png" />
+		<meta property="og:image" content="https://bmatsantos.github.io/img/og/banner.png" />
 		<meta property="og:image:width" content="1920" />
 		<meta property="og:image:height" content="1080" />
-		<meta property="og:image:alt" content="bMatSantos" />
+		<meta property="og:image:alt" content="Banner bMatSantos" />
 		<meta property="og:site_name" content="bMatSantos" />
-		<meta property="og:description" content="Compilado de fã-traduções de vários jogos para português brasileiro." />
+		<meta property="og:description" content="Página do fã-tradutor focado em Super Mario e localização." />
 
 		<meta name="description" 
 			content="Página do fã-tradutor focado em Super Mario e localização." />
 		<meta name="robots" content="index, follow">
 		<meta name="keywords" content="bMatSantos, bMats, bMat, fantranslation, tradução, português, pt-br">
 
-		<link rel="shortcut icon" href="img/favicon.png">
 
 		<!-- Bootstrap CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
