--- a/index.html
+++ b/index.html
@@ -48,10 +48,13 @@
 					// if (patches[i].arquivo_img)
 					// 	imagemCard = 'img/boxart/'+ patches[i].capa;
 
-					// Ajustando data
+					// Ajustando datas
 					strDataVer = ('0' + patches[i].dataVer.getDate()).slice(-2) + '/'
 					             + ('0' + (patches[i].dataVer.getMonth()+1)).slice(-2) + '/'
 					             + patches[i].dataVer.getFullYear();
+					strDataLanc = ('0' + patches[i].dataLanc.getDate()).slice(-2) + '/'
+					            + ('0' + (patches[i].dataLanc.getMonth()+1)).slice(-2) + '/'
+					            + patches[i].dataLanc.getFullYear();
 
 					var bloco = '<div class="item-grade px-1 py-2 col-sm-6 col-lg-4">'
 					+ '<div class="card text-center">' // Nome
@@ -67,8 +70,8 @@
 							}
 							}
 						bloco += '</div>'
-						
-						+ '<div class="card-body d-flex">'	// Imagem
+						// Imagem
+						+ '<div class="card-body d-flex">'
 							+ '<picture class="mx-auto w-100">'
 								+ '<source media="(max-width:300px)" srcset="img/' + patches[i].arquivo_img + '-300.png">'
 								+ '<source media="(max-width:768px)" srcset="img/' + patches[i].arquivo_img + '-768.png">'
@@ -78,8 +81,9 @@
 						+ '</div>'
 						// Versão
 						+ '<div class="card-footer rounded-0 txt-escuro">'
-							+ patches[i].ver + ' - ' + strDataVer
-						+ '</div>'
+							+ patches[i].ver + ' - ' + strDataVer;
+							if (strDataVer != strDataLanc) bloco += '<br/>Publicada em ' + strDataLanc;
+						bloco += '</div>'
 						// Links
 						+ '<div class="card-footer rounded-0 px-2">'
 							+ '<div class="btn-group flex-wrap w-100 fw-semibold">';
@@ -105,16 +109,6 @@
 				});
 
 				setInterval(function(){
-					for (var n = 1; n <= $('.item-grade').length; n++) {
-		            	var thisCard = '.item-grade:nth-child('+n+') .card';
-
-		            	if ($(thisCard+' .card-header').width() > 278) {
-		            		 $(thisCard+' .nome-line-break').hide();
-		            	} else {
-		            		 $(thisCard+' .nome-line-break').show();
-		            	}
-		            }
-
 		            // layout Masonry after each image loads
 					$grid.imagesLoaded().progress(function() {
 						$grid.masonry('layout');
