--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 	</head>
 
 	<body>
-		<section id="hero" class="bg-azul container-fluid m-0 row align-items-center">
+		<section id="hero" class="bg-azul container-fluid m-0 row align-items-center anima">
 			<img src="img/pixel-logo.png" alt="bMatSantos (Logo)" class="pixel-art img-fluid p-0 mx-auto">
 		</section>
 
@@ -138,5 +138,6 @@
 		<div html-include="footer.html" class="p-2"></div>
 
 		<script src="js/common.js"></script>
+		<!-- I'm a digital designer that got into the internet pretty early. I'm a fan of various things, and I love to express what I like by Translating. -->
 	</body>
 </html>
