--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							if (patches[i].tags) {
 							for (var t = 0; t < patches[i].tags.length; t++) {
 								bloco +=
-								'<div class="badge bg-rosa fw-medium txt-escuro rounded-pill">'+ patches[i].tags[t] +'</div>';
+								'<div class="badge bg-rosa fw-medium txt-anil rounded-pill">'+ patches[i].tags[t] +'</div>';
 							}
 							}
 						bloco += '</div>'
