--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="shortcut icon" href="img/favicon.png">
 		
 		<!-- Open Graph -->
-		<meta property="og:title" content="Traduções" />
+		<meta property="og:title" content="Traduções - bMatSantos" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://bmatsantos.github.io" />
 		<meta property="og:image" content="https://bmatsantos.github.io/img/og/banner.png" />
@@ -44,7 +44,7 @@
 				for (var i = 0; i < patches.length; i++) {
 					imagemCard = "img/layout/unknown.png";
 
-					// Verificando se há imagem da capa
+					// Verificando se há imagem
 					// if (patches[i].arquivo_img)
 					// 	imagemCard = 'img/boxart/'+ patches[i].capa;
 
@@ -105,7 +105,7 @@
 					// options
 					itemSelector: '.item-grade',
 					percentPosition: true,
-					transitionDuration: '0s',
+					transitionDuration: '0.1s',
 					horizontalOrder: true,
 				});
 
