--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
 
 	<body>
 		<section id="hero" class="bg-azul container-fluid m-0 row align-items-center anima">
-			<img src="img/pixel-logo.png" alt="bMatSantos (Logo)" class="pixel-art img-fluid p-0 mx-auto">
+			<div class="paralelograma onscreen bg-semibranco anima"></div>
+			<img src="img/pixel-logo.png" id="logo" alt="bMatSantos (Logo)" id="hero"class="pixel-art offscreen img-fluid p-0 mx-auto">
 		</section>
 
 		<h1 class="d-none">Patches de Tradução</h1>
